Modify backend error handling to be more visually uniform with the rest of the signup page Modify backend error text to be more visible Modify signup to no longer show signup form when user is logged in

--- a/src/app.css
+++ b/src/app.css
@@ -1167,6 +1167,11 @@ body.light-theme .aboutMePopup {
   flex-direction: column;
 }
 
+.signupError{
+  color: rgb(179, 74, 74);
+  
+}
+
 .signupForm {
   display: flex;
   flex-direction: column;
